@@ -96,7 +96,6 @@ AbstractPreparedPolygonContains::findAndClassifyIntersections(const geom::Geomet
 
 	for (std::size_t i = 0, ni = lineSegStr.size(); i < ni; i++ )
 	{
-		delete lineSegStr[i]->getCoordinates();
 		delete lineSegStr[i];
 	}
 }
