@@ -61,7 +61,6 @@ namespace prep { // geos.geom.prep
 		bool segsIntersect = fssif->intersects( &lineSegStr);// prepLine.getIntersectionFinder()->intersects(lineSegStr);
 
 		for ( size_t i = 0, ni = lineSegStr.size(); i < ni; i++ ) {
-			delete lineSegStr[ i ]->getCoordinates();
 			delete lineSegStr[ i ];
 		}
 
