@@ -52,7 +52,6 @@ PreparedPolygon::~PreparedPolygon()
 
 	for ( std::size_t i = 0, ni = segStrings.size(); i < ni; i++ )
 	{
-		delete segStrings[ i ]->getCoordinates();
 		delete segStrings[ i ];
 	}
 }
