@@ -76,14 +76,12 @@ namespace tut
 
         ensure_equals(cs->size(), 2u);
 
-        SegmentStringAutoPtr ss(makeSegmentString(cs.get()));
+        SegmentStringAutoPtr ss(makeSegmentString(cs.release()));
         ensure(0 != ss.get());
 
         ensure_equals(ss->size(), 2u);
 
         ensure_equals(ss->getData(), (void*)0);
-
-        ensure_equals(ss->getCoordinates(), cs.get());
 
         ensure_equals(ss->getCoordinate(0), c0);
 
@@ -113,14 +111,12 @@ namespace tut
 
     ensure_equals(cs->size(), 2u);
 
-    SegmentStringAutoPtr ss(makeSegmentString(cs.get()));
+    SegmentStringAutoPtr ss(makeSegmentString(cs.release()));
     ensure(0 != ss.get());
 
     ensure_equals(ss->size(), 2u);
 
     ensure_equals(ss->getData(), (void*)0);
-
-    ensure_equals(ss->getCoordinates(), cs.get());
 
     ensure_equals(ss->getCoordinate(0), c0);
 
@@ -153,14 +149,12 @@ namespace tut
 
     ensure_equals(cs->size(), 4u);
 
-    SegmentStringAutoPtr ss(makeSegmentString(cs.get()));
+    SegmentStringAutoPtr ss(makeSegmentString(cs.release()));
     ensure(0 != ss.get());
 
     ensure_equals(ss->size(), 4u);
 
     ensure_equals(ss->getData(), (void*)0);
-
-    ensure_equals(ss->getCoordinates(), cs.get());
 
     ensure_equals(ss->getCoordinate(0), c0);
 
@@ -215,7 +209,7 @@ namespace tut
         cs->add(p0);
         cs->add(p1);
 
-        SegmentStringAutoPtr ss(makeSegmentString(cs.get()));
+        SegmentStringAutoPtr ss(makeSegmentString(cs.release()));
 
         ensure_equals(ss->getNodeList().size(), 0u);
 
