@@ -68,7 +68,7 @@ namespace tut
 
         // Create SegmentString instance
         
-        NodedSegmentString segment(cs.get(), 0);
+        NodedSegmentString segment(cs.release(), 0);
 
         ensure_equals( segment.size(), coords_size );
 
@@ -116,7 +116,7 @@ namespace tut
 
         // Create SegmentString instance
         
-        NodedSegmentString segment(cs.get(), 0);
+        NodedSegmentString segment(cs.release(), 0);
 
         ensure_equals( segment.size(), coords_size );
 
@@ -158,7 +158,7 @@ namespace tut
 
         // Create SegmentString instance
         
-        NodedSegmentString segment(cs.get(), 0);
+        NodedSegmentString segment(cs.release(), 0);
 
         ensure_equals( segment.size(), coords_size );
 
@@ -200,7 +200,7 @@ namespace tut
 
         // Create SegmentString instance
         
-        NodedSegmentString segment(cs.get(), 0);
+        NodedSegmentString segment(cs.release(), 0);
 
         ensure_equals( segment.size(), coords_size );
 
